# practice

./: CMakeLists.txt  RANSAC_plane_true.pcd  main.cpp  tabletop_passthrough.pcd
output/PlaneModelSegmentation/: PMS_0.010000.las
